--- a/README
+++ b/README
@@ -1,18 +1,15 @@
 Welcome to your Appcelerator Titanium Mobile Project
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
+This is sample project for how to create table in sqlite table in alloy.
 
 
 
-----------------------------------
-Stuff our legal folk make us say:
+You can refer the logic in app/controllers/index.js
 
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
+createTable() function.
 
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
 
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
+I am creating table in traditional way. 
+
+
 
